# melange-esy-template

./: .gitignore  README.md  bsconfig.json  dune  dune-project  dune.mel.bak  esy.json  package-lock.json  package.json
.github/workflows/: build-sample-project.yml  update-esy-dependencies.yml
esy.lock/: index.json
esy.lock/overrides/opam__s__melange_opam__c__2.0.0_opam_override/files/: awk.patch
esy.lock/overrides/opam__s__ocamlbuild_opam__c__0.14.2_opam_override/files/: ocamlbuild-0.14.2.patch
src/: Main.re  ReactApp.re  dune  index.html
src/world/: dune  world.ml
