(melange.emit
 (target output)
 (alias react)
 (libraries melange reason-react world)
 (modules :standard \ hello main)
 (preprocess
  (pps melange.ppx reactjs-jsx-ppx))
 (module_systems es6))

(melange.emit
 (target node)
 (alias node)
 (libraries world)
 (modules hello main)
 (module_systems commonjs))
